Fixed button sizing on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ a:active {
   margin: auto;
   margin-top: 20px;
   background-color: rgba(0, 140, 186, 0.25); /* 33, 33, 33, 0.5 */
-  padding: 75px;
+  padding: 30px;
   width: 60%;
 }
 
@@ -119,7 +119,7 @@ h2 {
   background-color: rgba(0, 140, 186, 0.62);
   border: none;
   padding: 14px 24px;
-  width: 260px;
+  width: 235px;
   transition: all 0.4s;
   cursor: pointer;
   margin: 5px;
